[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/Box.gd" type="Script" id=1]
[ext_resource path="res://sprites/spritesheet_box.png" type="Texture" id=2]
[ext_resource path="res://sprites/big_highlight.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": false,
"name": "open",
"speed": 5.0
} ]

[node name="Box" type="Area2D"]
z_index = -2
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionBox" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="BoxAnimatedSprite" type="AnimatedSprite" parent="."]
z_index = 2
frames = SubResource( 5 )
animation = "open"

[node name="HighlightSprite" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.8, 0.8 )
z_index = 1
texture = ExtResource( 3 )

[node name="ExplodeTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
[connection signal="timeout" from="ExplodeTimer" to="." method="_on_ExplodeTimer_timeout"]
